@@ -217,17 +217,17 @@ $data_source_types = array(
 	);
 
 $graph_item_types = array(
-	GRAPH_ITEM_TYPE_COMMENT		=> "COMMENT",
-	GRAPH_ITEM_TYPE_HRULE		=> "HRULE",
-	GRAPH_ITEM_TYPE_VRULE		=> "VRULE",
-	GRAPH_ITEM_TYPE_LINE1		=> "LINE1",
-	GRAPH_ITEM_TYPE_LINE2		=> "LINE2",
-	GRAPH_ITEM_TYPE_LINE3		=> "LINE3",
-	GRAPH_ITEM_TYPE_AREA		=> "AREA",
-	GRAPH_ITEM_TYPE_STACK		=> "STACK",
-	GRAPH_ITEM_TYPE_GPRINT		=> "GPRINT",
-	GRAPH_ITEM_TYPE_LEGEND		=> "LEGEND",
-	GRAPH_ITEM_TYPE_VDEF_LEGEND	=> "VDEF-LEGEND",
+	GRAPH_ITEM_TYPE_COMMENT			=> "COMMENT",
+	GRAPH_ITEM_TYPE_HRULE			=> "HRULE",
+	GRAPH_ITEM_TYPE_VRULE			=> "VRULE",
+	GRAPH_ITEM_TYPE_LINE1			=> "LINE1",
+	GRAPH_ITEM_TYPE_LINE2			=> "LINE2",
+	GRAPH_ITEM_TYPE_LINE3			=> "LINE3",
+	GRAPH_ITEM_TYPE_AREA			=> "AREA",
+	GRAPH_ITEM_TYPE_STACK			=> "STACK",
+	GRAPH_ITEM_TYPE_GPRINT			=> "GPRINT",
+	GRAPH_ITEM_TYPE_LEGEND			=> "LEGEND",
+	GRAPH_ITEM_TYPE_CUSTOM_LEGEND	=> __("Custom Legend"),
 	);
 
 $image_types = array(
