@@ -146,7 +146,7 @@ define("GRAPH_ITEM_TYPE_AREA",			7);
 define("GRAPH_ITEM_TYPE_STACK",			8);
 define("GRAPH_ITEM_TYPE_GPRINT",		9);
 define("GRAPH_ITEM_TYPE_LEGEND", 		10);
-define("GRAPH_ITEM_TYPE_VDEF_LEGEND",	11);
+define("GRAPH_ITEM_TYPE_CUSTOM_LEGEND",	11);
 
 define("CVDEF_ITEM_TYPE_FUNCTION",		1);
 define("CVDEF_ITEM_TYPE_OPERATOR",		2);
