@@ -31,6 +31,7 @@ $tabs = array(
 	"path"           => __("Paths"),
 	"export"         => __("Graph Export"),
 	"visual"         => __("Visual"),
+	"legend"         => __("Legend"),
 	"authentication" => __("Authentication"),
 	"logging"        => __("Logging")
 );
@@ -803,6 +804,140 @@ $settings = array(
 			"default" => "",
 			"size" => "8",
 			"description" => __("Color tag of the arrow (rrggbb[aa])."),
+			),
+		),
+	"legend" => array(
+		"custom_legend_header1" => array(
+			"friendly_name" => __("Graph Legend Item#1"),
+			"method" => "spacer",
+			),
+		"cl1_cf_id" => array(
+			"friendly_name" => __("Consolidation Function"),
+			"method" => "drop_array",
+			"array" => $consolidation_functions,
+			"default" => RRD_CF_LAST,
+			"description" => __("How data for this item is represented statistically on the graph."),
+			),
+		"cl1_vdef_id" => array(
+			"friendly_name" => __("VDEF Function. Not available for rrdtool-1.0.x."),
+			"method" => "drop_sql",
+			"sql" => "select id,name from vdef order by name",
+			"default" => 4,
+			"none_value" => "None",
+			"description" => __("A VDEF (math) function to apply to this item on the legend."),
+			"class" => "not_RRD_1_0_x",
+			),
+		"cl1_text_format" => array(
+			"friendly_name" => __("Text Format"),
+			"method" => "textbox",
+			"max_length" => "255",
+			"default" => "Last:",
+			"description" => __("Text that will be displayed on the legend for this graph item."),
+			),
+		"cl1_hard_return" => array(
+			"friendly_name" => __("Insert Hard Return"),
+			"method" => "checkbox",
+			"default" => "",
+			"description" => __("Forces the legend to the next line after this item."),
+			),
+		"custom_legend_header2" => array(
+			"friendly_name" => __("Graph Legend Item#2"),
+			"method" => "spacer",
+			),
+		"cl2_cf_id" => array(
+			"friendly_name" => __("Consolidation Function"),
+			"method" => "drop_array",
+			"array" => $consolidation_functions,
+			"default" => RRD_CF_AVERAGE,
+			"description" => __("How data for this item is represented statistically on the graph."),
+			),
+		"cl2_vdef_id" => array(
+			"friendly_name" => __("VDEF Function. Not available for rrdtool-1.0.x."),
+			"method" => "drop_sql",
+			"sql" => "select id,name from vdef order by name",
+			"default" => 3,
+			"none_value" => "None",
+			"description" => __("A VDEF (math) function to apply to this item on the legend."),
+			"class" => "not_RRD_1_0_x",
+			),
+		"cl2_text_format" => array(
+			"friendly_name" => __("Text Format"),
+			"method" => "textbox",
+			"max_length" => "255",
+			"default" => "Average:",
+			"description" => __("Text that will be displayed on the legend for this graph item."),
+			),
+		"cl2_hard_return" => array(
+			"friendly_name" => __("Insert Hard Return"),
+			"method" => "checkbox",
+			"default" => "",
+			"description" => __("Forces the legend to the next line after this item."),
+			),
+		"custom_legend_header3" => array(
+			"friendly_name" => __("Graph Legend Item#3"),
+			"method" => "spacer",
+			),
+		"cl3_cf_id" => array(
+			"friendly_name" => __("Consolidation Function"),
+			"method" => "drop_array",
+			"array" => $consolidation_functions,
+			"default" => RRD_CF_MAX,
+			"description" => __("How data for this item is represented statistically on the graph."),
+			),
+		"cl3_vdef_id" => array(
+			"friendly_name" => __("VDEF Function. Not available for rrdtool-1.0.x."),
+			"method" => "drop_sql",
+			"sql" => "select id,name from vdef order by name",
+			"default" => 1,
+			"none_value" => "None",
+			"description" => __("A VDEF (math) function to apply to this item on the legend."),
+			"class" => "not_RRD_1_0_x",
+			),
+		"cl3_text_format" => array(
+			"friendly_name" => __("Text Format"),
+			"method" => "textbox",
+			"max_length" => "255",
+			"default" => "Maximum:",
+			"description" => __("Text that will be displayed on the legend for this graph item."),
+			),
+		"cl3_hard_return" => array(
+			"friendly_name" => __("Insert Hard Return"),
+			"method" => "checkbox",
+			"default" => CHECKED,
+			"description" => __("Forces the legend to the next line after this item."),
+			),
+		"custom_legend_header4" => array(
+			"friendly_name" => __("Graph Legend Item#4"),
+			"method" => "spacer",
+			),
+		"cl4_cf_id" => array(
+			"friendly_name" => __("Consolidation Function"),
+			"method" => "drop_array",
+			"array" => $consolidation_functions,
+			"default" => "0",
+			"description" => __("How data for this item is represented statistically on the graph."),
+			),
+		"cl4_vdef_id" => array(
+			"friendly_name" => __("VDEF Function. Not available for rrdtool-1.0.x."),
+			"method" => "drop_sql",
+			"sql" => "select id,name from vdef order by name",
+			"default" => "0",
+			"none_value" => "None",
+			"description" => __("A VDEF (math) function to apply to this item on the legend."),
+			"class" => "not_RRD_1_0_x",
+			),
+		"cl4_text_format" => array(
+			"friendly_name" => __("Text Format"),
+			"method" => "textbox",
+			"max_length" => "255",
+			"default" => "",
+			"description" => __("Text that will be displayed on the legend for this graph item."),
+			),
+		"cl4_hard_return" => array(
+			"friendly_name" => __("Insert Hard Return"),
+			"method" => "checkbox",
+			"default" => "",
+			"description" => __("Forces the legend to the next line after this item."),
 			),
 		),
 	"poller" => array(
